--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,8 @@ body {
   color: rgb(158, 172, 161)
 }
 
+/* Nav Bar Styling */
+
 .searchbar {
   text-align: center;
 }
@@ -69,7 +71,7 @@ body {
   }
 }
 
-
+/* Home Page Styling */
 
 #book-store-name {
   text-align: center;
@@ -86,6 +88,13 @@ body {
   display: flex;
   justify-content: center;
 }
+
+.home-page-label {
+  padding: 10px;
+  margin-left: 20px;
+}
+
+/* Book Display/Book Card styling */
 
 .books-card-box {
   display: flex;
@@ -117,7 +126,8 @@ body {
   cursor: pointer;
 }
 
-.home-page-label {
-  padding: 10px;
-  margin-left: 20px;
+/* Book Page styling */
+
+ul {
+  list-style-type: none;
 }
