--- a/src/App.css
+++ b/src/App.css
@@ -10,7 +10,7 @@ body {
 
 .topnav {
   overflow: hidden;
-  background-color: rgb(253, 249, 224);
+  background-color: rgba(253, 249, 224, 0.859);
   position: sticky;
   top: 0;
 }
