--- a/src/components/Admin.css
+++ b/src/components/Admin.css
@@ -3,20 +3,56 @@ table {
     border-collapse: collapse;
     width: 100%;
     color: black;
+    table-layout: fixed;
+
 }
 
-td,
 th {
     border: 1px solid #dddddd;
     text-align: left;
     padding: 8px;
+    width: 20%;
+
 }
 
 td {
-    height: 30px;
+    border: 1px solid #dddddd;
+    text-align: left;
+    padding: 8px;
     overflow: auto;
+    white-space: nowrap;
+
 }
 
 tr:nth-child(even) {
     background-color: #ededed;
+}
+
+#id-column {
+    width: 40px;
+}
+
+#published-date-column {
+    width: 80px;
+}
+
+#price-column {
+    width: 50px;
+}
+
+#genre-column {
+    width: 125px;
+}
+
+#table-container {
+    margin: 50px;
+    width: 95%;
+    height: 500px;
+    overflow: auto;
+    border: solid black
+}
+
+#table-box {
+    display: flex;
+    justify-content: center;
 }
