--- a/src/components/Admin.css
+++ b/src/components/Admin.css
@@ -45,7 +45,6 @@ tr:nth-child(even) {
 }
 
 #table-container {
-    margin: 50px;
     width: 95%;
     height: 500px;
     overflow: auto;
@@ -54,5 +53,18 @@ tr:nth-child(even) {
 
 #table-box {
     display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+#admin-button-container {
+    display: flex;
     justify-content: center;
+    margin: 30px;
+}
+
+.admin-button {
+    padding: 20px;
+    margin: 5px;
+    background-color: rgba(253, 249, 224);
 }
