--- a/src/components/Admin.css
+++ b/src/components/Admin.css
@@ -67,4 +67,10 @@ tr:nth-child(even) {
     padding: 20px;
     margin: 5px;
     background-color: rgba(253, 249, 224);
+    cursor: pointer;
+}
+
+#book-id :hover {
+    cursor: pointer;
+    background-color: rgba(253, 249, 224);
 }
