--- a/src/components/Login.css
+++ b/src/components/Login.css
@@ -172,5 +172,22 @@ form .form-inner input[type="submit"]:hover{
   .slider.round:before {
     border-radius: 50%;
   }
+
+  .suggestion-div{
+    padding: 0;
+    max-height: 280px;
+    overflow-y: auto;
+    position: relative;
+  }
+
+  .suggestion{
+    cursor: pointer;
+    padding: 20px 50px;
+    max-height: 50px;
+    max-width: 250px;
+    border-right: 1px solid black;
+    border-left: 1px solid black;
+    border-bottom: 1px solid black;
+  }
   
   
